# scraping_fgo_wiki

./: .gitignore  Pipfile  convert.py  craft_essence.py  english_compare.py  english_servant.py  main.py  merge.py  pyproject.toml  reisou.py  servant.py  validate.py
data/: craft_essences.csv  items.json  servants.json  sound.json
data/dictionary/: item.json  servant.json  skill.json
data/english/: item.json  servant.json
data/english/servant/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+394 more)
data/servant/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+396 more)
fgo/: __init__.py  item.py  merge.py  patch.py  servant.py  text.py  types.py
fgo/english/: __init__.py  servant.py  types.py
fgo/schema/: enum.py  servant.py
lib/: __init__.py  io.py  item.py  merge.py  patch.py  servant.py  sound.py  text.py  types.py  validate.py
lib/english/: __init__.py  servant.py  types.py
lib/schema/: __init__.py  enum.py  servant.py
