[tool.poetry]
name = "scraping_fgo_wiki"
version = "0.1.0"
description = ""
authors = ["085astatine <astatine085@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
jsonschema = "^4.24.0"
lxml = "^5.4.0"
requests = "^2.32.3"
PyYAML = "^6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
